<?xml version="1.0" encoding="utf-8"?>
<resources >
    <string name="mine">我的</string>
    <string name="knowledge">知识点</string>
    <string name="home">首页</string>
    <string name="navigation">导航</string>
    <string name="public_account">公众号</string>
    <string name="project">项目</string>
    <string name="article_detail">文章详情</string>
    <string name="author">作者：</string>
    <string name="net_not_force_please_try_refresh">网络不给力，刷新一下试试？</string>
    <string name="loading">加载中...</string>
    <string name="refresh">刷新</string>
    <string name="login_register">点击头像登录/注册</string>
    <string name="my_setting">设置</string>
    <string name="my_logout">退出登录</string>
    <string name="login">登录</string>
    <string name="account">账号&#160;&#160;</string>
    <string name="phone_num">手机号</string>
    <string name="phone_num_input">请输入手机号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="register_password_too_short">密码不能少于6位，请重新设置</string>
    <string name="user_not_login">你还没有登录,请登录</string>
    <string name="collect">收藏</string>
    <string name="todo">待办</string>
    <string name="done">已完成</string>
    <string name="title">标题：</string>
    <string name="content">内容：</string>
    <string name="email_info_hint">请输入你要发送的邮件信息</string>
    <string name="help_feedback">反馈与建议</string>
    <string name="add_attachment">添加附件</string>
    <string name="font_size">字体大小</string>
    <string name="version_update">版本更新</string>
    <string name="night_mode">夜间模式</string>
    <string name="language_set">语言设置</string>
    <string name="please_input_account">请输入账号</string>
    <string name="phone_account">手机号/邮箱</string>
    <string name="password_dismatch">两次密码不一致</string>
    <string name="standrd">标准</string>
    <string name="preview_font_size">预览字体大小</string>
    <string name="slide_change_font_size">滑动下面的滑块调整字体大小</string>x
    <string name="please_input_contact">请输入联系方式</string>
    <string name="please_input_content">请输入内容</string>
    <string name="feedback_send_success">已经收到您的反馈</string>
    <string name="please_inupt_content">请输入反馈内容</string>
    <string name="please_inupt_contact">请输入联系方式</string>
    <string name="feedback_send_fail">反馈发送失败</string>
    <string name="send">发送</string>
    <string name="language_follow_system">跟随系统</string>
    <string name="language_chinese">简体中文</string>
    <string name="language_english">English</string>
    <string name="tiaoguo">跳过</string>
    <string name="welcome_learn_android">欢迎来到 学Android</string>
    <string name="press_exit">再按一次退出程序</string>
    <string name="search_content_no">请输入搜索关键字</string>
    <string name="save">保存</string>
    <string name="detail">详情</string>
    <string name="todo_finish_time">完成时间：</string>
    <string name="operate_success">操作成功</string>
    <string name="operate_failure">操作失败</string>
    <string name="add">添加</string>
    <string name="data_empty">数据为空</string>
    <string name="select_time">请选择时间</string>
    <string name="begin_speech">开始说话</string>
    <string name="empty_collect">你还没有收藏</string>
    <string name="empty_todo">你还没有待办事项</string>
    <string name="empty_done">你还没有完成事项</string>
    <string name="empty_search">没搜索到相应内容</string>

    <string name="customactivityoncrash_error_activity_error_occurred_explanation" translatable="false">程序出错了，抱歉给您带来不便\n为了尽快解决此问题，您可以点击错误详情，并复制错误代码或截图，发邮件反馈到技术支持邮箱：gaoleiandroid@163.com</string>
    <string name="customactivityoncrash_error_activity_restart_app" translatable="false">重启</string>
    <string name="customactivityoncrash_error_activity_close_app" translatable="false">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details" translatable="false">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_title" translatable="false">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close" translatable="false">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy" translatable="false">复制</string>
    <string name="customactivityoncrash_error_activity_error_details_copied" translatable="false">已复制</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label" translatable="false">错误信息</string>

</resources>
