<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical"
    skin:enable="true">

    <com.android.base.view.TitleView
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/please_input_contact"
        android:textSize="14sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:visibility="gone"
            skin:enable="true" />

        <EditText
            android:id="@+id/et_email_title"
            style="@style/et_feedback_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_contact"
            skin:enable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/content"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:visibility="gone"
            skin:enable="true" />

        <EditText
            android:id="@+id/et_email_content"
            style="@style/et_feedback_style"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="top"
            android:hint="@string/please_input_content"
            android:textSize="14sp"
            skin:enable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/add_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corner_bg2"
            android:padding="5dp"
            android:text="@string/add_attachment"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/file_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/send_btn"
        style="@style/btn_selector_match_style"
        android:background="@drawable/btn_bg_selector"
        android:text="@string/send"
        skin:enable="true" />

</LinearLayout>