<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical"
    skin:enable="true">

    <com.android.base.view.TitleView
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/help_feedback_layout"
        style="@style/user_info_layout"
        skin:enable="true">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_help_feedback" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/help_feedback"
            skin:enable="true" />
    </LinearLayout>

    <View
        style="@style/horizontal_divider_setting"
        skin:enable="true" />

    <LinearLayout
        android:id="@+id/version_update_layout"
        style="@style/user_info_layout"
        skin:enable="true">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_update" />

        <TextView
            style="@style/user_info_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/version_update"
            skin:enable="true" />

        <TextView
            android:id="@+id/tv_versionName"
            style="@style/user_info_txt"
            android:textColor="@color/color_9b9b9b"
            skin:enable="true" />
    </LinearLayout>

    <View
        style="@style/horizontal_divider_setting"
        skin:enable="true" />

    <LinearLayout
        style="@style/user_info_layout"
        android:orientation="horizontal"
        skin:enable="true">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_night_mode" />

        <TextView
            style="@style/user_info_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/night_mode"
            skin:enable="true" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_setting_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/abc_btn_check_material"
            android:buttonTint="@color/colorAccent" />
    </LinearLayout>

    <View
        style="@style/horizontal_divider_setting"
        skin:enable="true" />

    <LinearLayout
        android:id="@+id/language_switch_layout"
        style="@style/user_info_layout"
        android:orientation="horizontal"
        skin:enable="true">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_language_switch" />

        <TextView
            style="@style/user_info_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/language_set"
            skin:enable="true" />


    </LinearLayout>

    <View
        style="@style/horizontal_divider_setting"
        skin:enable="true" />

    <LinearLayout
        android:id="@+id/font_size_layout"
        style="@style/user_info_layout"
        android:orientation="horizontal"
        skin:enable="true">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_font_switch" />

        <TextView
            style="@style/user_info_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/font_size"
            skin:enable="true" />


    </LinearLayout>

    <View
        style="@style/horizontal_divider_setting"
        android:layout_height="10dp"
        skin:enable="true" />

    <LinearLayout
        android:id="@+id/my_logout_layout"
        style="@style/user_info_layout"
        skin:enable="true">

        <ImageView
            style="@style/user_info_icon"
            android:src="@drawable/icon_my_logout" />

        <TextView
            style="@style/user_info_txt"
            android:text="@string/my_logout"
            skin:enable="true" />
    </LinearLayout>

    <View
        style="@style/horizontal_divider_setting"
        android:background="@color/divider_color"
        skin:enable="true" />
</LinearLayout>
